[gd_scene load_steps=2 format=2]

[ext_resource path="res://dm_controls.gd" type="Script" id=1]

[node name="DmControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapControls" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapMenu" type="MenuButton" parent="MapControls"]
margin_right = 82.0
margin_bottom = 40.0
text = "Select Map"
flat = false
items = [ "res://map_test.txt", null, 0, false, false, 0, 0, null, "", false, "res://map_mines.txt", null, 0, false, false, 1, 0, null, "", false, "res://map_plane.txt", null, 0, false, false, 2, 0, null, "", false ]

[node name="LoadMap" type="Button" parent="MapControls"]
margin_left = 86.0
margin_right = 159.0
margin_bottom = 40.0
text = "Load Map"

[node name="CurrentMap" type="Label" parent="MapControls"]
margin_left = 163.0
margin_top = 13.0
margin_right = 245.0
margin_bottom = 27.0
text = "Current Map:"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 400, 300 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.txt; Map Files" )

[node name="RoomControls" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -177.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShareRoom" type="Button" parent="RoomControls"]
margin_right = 88.0
margin_bottom = 40.0
text = "Share Room"

[node name="UnhideTile" type="Button" parent="RoomControls"]
margin_left = 92.0
margin_right = 177.0
margin_bottom = 40.0
text = "Unhide Tile"
[connection signal="pressed" from="MapControls/LoadMap" to="." method="_on_LoadMap_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="RoomControls/ShareRoom" to="." method="_on_Share_pressed"]
[connection signal="pressed" from="RoomControls/ShareRoom" to="." method="_on_ShareRoom_pressed"]
[connection signal="pressed" from="RoomControls/UnhideTile" to="." method="_on_Unhide_pressed"]
[connection signal="pressed" from="RoomControls/UnhideTile" to="." method="_on_UnhideTile_pressed"]
